--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -7,6 +7,7 @@
   html {
     font-family: 'Inter', system-ui, sans-serif;
     scroll-behavior: smooth;
+    direction: rtl;
   }
   
   body {
@@ -15,6 +16,7 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-align: inherit;
+    direction: rtl;
   }
 
   * {
